<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="textview"><br> Non-FCV tobacco improvement started with selection from local types grown in the field rather than exotic introduction and further improvement was achieved through hybridization programmes. In the year 1950 the institute released its first FCV tobacco variety ‘Chatham’ through exotic introduction followed by two chewing tobacco varieties ‘Chama’ and ‘Podali’ in 1956 through local selection from the field crop.\n</br>
        <br>\n</br>
        <br>The other exotic introductions in FCV were Harrison Special, Delcrest, Virginia Gold etc. Various efforts are being made to exploit the wild species in the cultivar development programme. Genetic improvements have been made in a wide range of characteristics including pest resistance, physical attributes, agronomic performance, leaf quality and chemical composition of cured leaf. \n</br>
        <br>\n</br>
        <br> A unique feature of tobacco production in India is that both Flue-Cured Virginia (FCV) and non-FCV tobaccos are cultivated under widely varying agro-ecological situations. FCV, bidi, hookah, chewing, cigar-wrapper, cheroot, burley, oriental, HDBRG, lanka, pikka, natu etc., are the main types of tobacco grown in the country, with FCV and burley tobacco being the main exportable types.\n</br>
        <br>\n</br>
        <br>Tobacco is grown in as many as 15 states of India under different agroecological conditions. Gujarat, Andhra Pradesh (A.P.) and Karnataka occupy 1st, 2nd and 3rd positions, respectively in both area and production of tobacco in the country. The other states cultivating tobacco include Uttar Pradesh (U.P.), West Bengal (W.B.), Bihar, Tamil Nadu (T.N.) and Odisha. Wide diversity in tobacco types, bio-physical and socio-economic aspects of each tobacco production zone necessitates development of location specific tobacco varieties and agro-techniques suitable for each niche of production.\n</br>
        <br>\n</br>
        <br>The research on bidi, rustica, chewing and natu tobaccos cultivated in Gujarat, Uttar Pradesh, Bihar, Odisha and Andhra Pradesh was not covered by ICAR-CTRI and hence necessitated the establishment of the All India Coordinated Research Project (AICRP) on Tobacco. \n</br>
        <br>\n</br>
        <br><b> •Area, production and productivity\n</b>\n</br>
<br> 1.	Area: 214374 ha   \n</br>
<br> 2.	Production: 464870 tonnes  \n</br>
<br> 3.	Productivity: 2168 kg/ha  \n</br>
</string>
    <string name="header">ALL INDIA NETWORK PROJECT ON TOBACCO <br> ICAR-CENTRAL TOBACCO RESEARCH INSTITUTE </br>RAJAHMUNDRY,AP:533105</string>
    <string name="typesoftobacco">TYPES OF TOBACCO</string>
    <string name="BIDI">BIDI</string>
    <string name="BURLEY">BURLEY</string>
    <string name="CHEWING">CHEWING</string>
    <string name="CHEROOT">CHEROOT</string>
    <string name="CIGAR">CIGAR</string>
    <string name="JATI">JATI</string>
    <string name="LANKA">LANKA</string>
    <string name="MOTIHARI">MOTIHARI</string>
    <string name="NATUPIKKA">NATU/PIKKA</string>
    <string name="OREINTAL">ORIENTAL</string>
    <string name="RUSTICA">RUSTICA</string>
    <string name="GAP1">GAP</string>
    <string name="SoilsandClimate">Soils and Climate</string>
    <string name="Fieldcropmanagement">Field crop management</string>
    <string name="Nurserymanagement">Nursery management</string>
    <string name="Postharvestmanagement">Post harvest management</string>
    <string name="Marketing">Marketing</string>
    <string name="footer">©2022 Reserved to Central Tobacco Research Institute.</string>
    <string name="text"><br><b> •Area, production and productivity\n</b>\n</br>
        <br>\n</br>
        <br> 1.	Area: 159658 ha \n</br>
        <br>\n</br>
        <br> 2.	Production: 234820 tonnes  \n</br>
        <br>\n</br>
        <br> 3. Productivity: 1471 kg/ha   \n</br>
        <br>\n</br>
        <br>\n</br>
<br><b>  •States grown \n</b>\n</br>
<br>1.	Andhra Pradesh \n</br>
        <br>\n</br>
<br>2.	Karnataka   \n</br>
        <br>\n</br>
        <br>\n</br>
     <br><b>   •For more details download CTRI FCV tobacco mobile app  \n</b>\n</br>
    </string>
    <string name="ap">
<br> Bidi tobacco is grown as sole crop under rainfed conditions in the Vertisols of Andhra Pradesh and its production is largely concentrated in Nandikotkur, Bramhanakotkur, Midthur, Orvakal and Jupadu Bunglow areas of Kurnool district in an area of 10,500 ha with a production of about 16.27 million kg and a productivity of 1550 kg/ha. </br>

    </string>
    <string name="tamilnadu">
<br> Chewing tobacco cultivation in Tamil Nadu is concentrated in Dindigul, Erode, Coimbatore, Madurai, South Arcot, Nagapatnam, Salem, Thanjavur, Kanyakumari and Tirunelveli districts in an area of about 11000 ha. Chewing tobacco is grown on a wide range of soils which are alkaline with irrigation waters having high salt content. The productivity of chewing tobacco in Tami Nadu was increased by 46% through release of high yielding varieties.  </br>

    </string>
    <string name="rgujarat">
<br> In Gujarat, Rustica grown in Sabarkantha, Banaskantha, Nadiad, Gandhinagar, Khambat, Mehsana, Kheda and Anand districts of Gujarat in rabi crop with 8 to 9 irrigations. High yielding Rustica tobacco varieties in Gujarat increased the yield by 122%.</br>

    </string>
    <string name="jwestbengal">
<br>
In West Bengal Jati tobacco (chewing) is grown on acidic, sandy and silty loams in Cooch Behar district in an area of 4000 ha.</br>

    </string>
    <string name="tnc">
<br> ICAR - Central Tobacco Research Institute, Research Station, Vedasandur - 624 710, Tamil Nadu.

 </br>
 <br>Email: ctrirsvdr@yahoo.com</br>

    </string>
    <string name="nstation">
<br> Indian council of Agriculture Research sanctioned a centre to Andhra Pradesh Agricultural University at Kavali of Nellore District of Andhra Pradesh under All India Coordinated Research Project on Tobacco to cater the needs of Southern Light Soil FCV tobacco growing areas of Andhra Pradesh in October, 1970. Consequent to the establishment of full -fledged Research station at Kandukur under Central Tobacco Research Institute, the Kavali centre was shifted to Venkataramannagudem of West Godavari district in June, 1978 to serve irrigated Natu tobacco growing areas of Andhra Pradesh. The venkataramannagudem centre under APAU was shifted to Nandyal from April, 1992 to work on cigarette Natu and Bidi tobacco.
All India Network Project on Tobacco, with Regional Agricultural Research Station – Nandyal as sub center started functioning from April 1992, to conduct research on bidi tobacco as well as rainfed natu tobacco.


 </br>


    </string>
    <string name="jstation">
<br>Before the partition of Bengal (During pre-independence period) Cigar wrapper tobacco used to be grown in Rangpur district, now Bangladesh. As a result of the partition the important cigar tobacco belt was lost. But massive demand of cigar tobacco by the domestic cigar industries located at Tiruchinapalli and Dindigul necessitated the search for a suitable agro-climatic area to cater to the domestic need. Based on intensive pilot trials the district of Cooch Behar in west Bengal ( 26 21\' N latitude and 89 27 E longitude ) situated at the foot hill plains of the Himalayas, adjacent to Rangpur was found suitable for growing Cigar tobacco . In 1951 the Research Station at Dinhata was established by the then ICTC for exploring the possibility of growing cigar local tobacco and to develop improved package of practices for enhancing the yield and quality standards and to improve Tobacco farmers of the region through research works. Motihari and Jati types of tobacco are grown in area of 12,000 hectares covering mostly the northern part of West Bengal. The Research Station is working on Cigar wrapper, Jati and Motihari tobaccos by evolving high yielding varieties with better quality, management of pests and diseases, minimising the cost of cultivation, producing pure seed and seedlings for the benefit of the farmers and finding most suitable inter crops for tobacco.

 </br>
    </string>
    <string name="rgstation">
<br>Tobacco with the highest excise revenue earning agricultural commodity plays a vital role in Indian agricultural economy. Among different tobacco growing states, Gujarat is one of the largest rustica tobacco growing states in the country. Looking to its important economic role, University had sanctioned the Tobacco Research Project and Strengthening Research on Tobacco during the year plan and Non plan in 1984 to 85 with its head quarter at Ladol till today to intensify the research work being carried out on major problems of tobacco having regional and inter-regional significance. Ladol was sanctioned as one of volunteer centers under the AICRP on tobacco. The AICRP on tobacco was renamed as All India Network Project on Tobacco under the administrative control of the Director, CTRI, Rajahmundry with effect from 16 to 8 to 98. The center works to cater to the needs of rustica tobacco growing areas of the state.

 </br>
    </string>
    <string name="mstation">
<br>•Before the partition of Bengal (During pre-independence period) Cigar wrapper tobacco used to be grown in Rangpur district, now Bangladesh. As a result of the partition the important cigar tobacco belt was lost. But massive demand of cigar tobacco by the domestic cigar industries located at Tiruchinapalli and Dindigul necessitated the search for a suitable agro-climatic area to cater to the domestic need. Based on intensive pilot trials the district of Cooch Behar in west Bengal ( 26 21\’ N latitude and 89 27 E longitude ) situated at the foot hill plains of the Himalayas, adjacent to Rangpur was found suitable for growing Cigar tobacco . In 1951 the Research Station at Dinhata was established by the then ICTC for exploring the possibility of growing cigar local tobacco and to develop improved package of practices for enhancing the yield and quality standards and to improve Tobacco farmers of the region through research works. Motihari and Jati types of tobacco are grown in area of 12,000 hectares covering mostly the northern part of West Bengal. The Research Station is working on Cigar wrapper, Jati and Motihari tobaccos by evolving high yielding varieties with better quality, management of pests and diseases, minimising the cost of cultivation, producing pure seed and seedlings for the benefit of the farmers and finding most suitable inter crops for tobacco.

 </br>
    </string>
    <string name="lstation">
<br>
    ICAR central tobacco research institute established in 1947 is mandated to conduct a basic and applied research on different tobacco types. Lanka tobacco is an air-cured tobacco exclusively grown on the banks and deltaic islands of Krishna and Godavari rivers in Andhra Pradesh. This tobacco is mainly used for handmade indigenous cheroots having characteristic aroma and pungent taste.
</br>
    </string>
    <string name="jcontact">
    <br> ICAR-CTRI Research Station, Dinhata – 736 135. West Bengal.

    </br>
    <br>Email:ctrirsdinhata@gmail.com</br>
    </string>
    <string name="ncontact">
    <br> Regional Agricultural Research Station (RARS), Acharya N.G. Ranga Agricultural University (ANGRAU), Nandyal- 518 502. Kurnool district, Andhra Pradesh

    </br>
    <br>Email: adr.rarsnandyal@angrau.ac.in</br>
    </string>
    <string name="rgcontact">
    <br> Agricultural Research Station, Sardarkrushinagar Dantiwada Agricultural University, Ladol 382 840, Vijapur Taluk,
Mehsana District, Gujarat.


    </br>
    <br>Email: arsladol@sdau.edu.in</br>
    </string>
    <string name="mcontact">
    <br>  ICAR-CTRI Research Station, Dinhata – 736 135. West Bengal.

    </br>
    <br>Email: ctrirsdinhata@gmail.com</br>
    </string>
</resources>