<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NONFCV.Bidi.Gujarat.GGAP.GGaPActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/backgroundimage"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="ObsoleteLayoutParam">


        <ImageView
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ctrilogo"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <TextView
            android:id="@+id/allindiaContent"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="ALL INDIA NETWORK PROJECT ON TOBACCO ICAR-CENTRAL TOBACCO RESEARCH INSTITUTE  RAJAHMUNDRY,AP:533105"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <ImageView
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/icarlogo"
            tools:ignore="ContentDescription,RtlHardcoded" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:alpha="0.9"
        android:background="@drawable/bgimage"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="G A P"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText"
            />

        <Button
            android:id="@+id/button1"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/SoilsandClimate"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:id="@+id/button2"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/Nurserymanagement"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:id="@+id/button3"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/Fieldcropmanagement"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:id="@+id/button4"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/Postharvestmanagement"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="15sp"
            android:layout_marginTop="60dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:id="@+id/button5"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/Marketing"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            tools:ignore="HardcodedText,RtlHardcoded" />


    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="©2022 Reserved to Central Tobacco Research Institute."
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,NotSibling"
            android:minLines="3"/>

</RelativeLayout>